cabal-version:       2.2

name:                tt
version:             0.1.0.0
synopsis:            Stupid Simple Network Throughput Test
description:         Stupid Simple Network Throughput Test
homepage:            https://github.com/TravisWhitaker/tt
bug-reports:         https://github.com/TravisWhitaker/tt/issues
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2021
category:            Network
extra-source-files:  CHANGELOG.md

executable tt
  main-is:             Main.hs
  other-modules:       Network.TT.TCP
  -- other-extensions:
  build-depends:       base ^>=4.14.1.0
                     , bytestring ^>= 0.11.1.0
                     , network ^>= 3.1.2.1
                     , stm ^>= 2.5.0.0
                     , optparse-applicative ^>= 0.16.1.0
                     , time ^>= 1.11.1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
                       -Wall
                       -Widentities
                       -Wredundant-constraints
                       -Wcompat
                       -Wno-type-defaults
                       -Wno-unused-local-binds
                       -Wno-unused-do-bind
                       -Wno-unused-matches
                       -Werror
                       -Wno-error=missing-home-modules
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-N3 -A64m -qn2 -T"
